--- a/templates/main/politic.html
+++ b/templates/main/politic.html
@@ -10,7 +10,7 @@
                 <div class="post-details-content">
                     <div class="post-details-body">
                         <div class="thumb">
-                            <img class="w-100" src="{% static 'assets/nimg/politic.webp' %}" alt="Image"/>
+                            <img class="w-100" src="{% static 'assets/nimg/politic.jpg' %}" alt="Image"/>
                         </div>
                         <div class="content">
                             <div class="meta">опубликовано, <a class="author">Администрацией </a><span
