--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -64,8 +64,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-7 col-md-8 col-lg-6 sm-pl-0 xs-pl-15 header-top-right">
                         <div class="header-info">
-                            <a href="tel://+00123456789"><i class="fa fa-phone"></i> +7 499 380 79 36</a>
-                            <a href="mailto://demo@example.com"><i class="fa fa-envelope"></i> asdlkqweuir324@gmail.com</a>
+                            <a href="tel://+00123456789"><i class="fa fa-phone"></i> +8 (495) 780-09-02</a>
+                            <a href="mailto://demo@example.com"><i class="fa fa-envelope"></i> multshop@gmail.com</a>
                             {% if request.user.is_authenticated %}
                                 <a href="{% url "indexing:profile" %}"><i class="fa fa-user"></i> Личный кабинет</a>
 
@@ -153,23 +153,14 @@
                                 <li><a href="{% url 'indexing:index' %}">Главная страница</a></li>
                                 <li class="has-submenu"><a href="{% url 'indexing:shop' %}">Каталог</a>
                                     <ul class="submenu-nav">
-                                        <li><a href="#">Детская одежда</a></li>
-                                        <li><a href="#">Настольные игры</a></li>
-                                        <li><a href="#">Мягкие игрушки</a></li>
-                                        <li><a href="#">Куклы и аксессуары</a></li>
-                                        <li><a href="#">Развивающие игры и хобби</a></li>
-                                        <li><a href="#">Радиоуправляемые модели</a></li>
-                                        <li><a href="#">Игровые наборы</a></li>
-                                        <li><a href="#">Все для праздника</a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-submenu"><a href="#">Товары для малышей</a>
-                                    <ul class="submenu-nav">
-                                        <li><a href="#">Развивающие игры</a></li>
-                                        <li><a href="#">Музыкальные игрушки</a></li>
-                                        <li><a href="#">Обучающие игры</a></li>
-                                        <li><a href="#">Для девочек</a></li>
-                                        <li><a href="#">Для мальчиков</a></li>
+                                        <li><a href="{% url 'indexing:clutch' %}">Детская одежда</a></li>
+                                        <li><a href="{% url 'indexing:game' %}">Настольные игры</a></li>
+                                        <li><a href="{% url 'indexing:pussy' %}">Мягкие игрушки</a></li>
+                                        <li><a href="{% url 'indexing:access' %}">Куклы и аксессуары</a></li>
+                                        <li><a href="{% url 'indexing:people' %}">Развивающие игры и хобби</a></li>
+                                        <li><a href="{% url 'indexing:radio' %}">Радиоуправляемые модели</a></li>
+                                        <li><a href="{% url 'indexing:gamepass' %}">Игровые наборы</a></li>
+                                        <li><a href="{% url 'indexing:event' %}">Все для праздника</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -259,7 +250,6 @@
                                         <li><a href="{% url 'indexing:contact' %}">- Помощь</a></li>
                                         <li><a href="{% url 'indexing:police' %}">- Политика</a></li>
                                         <li><a href="{% url 'indexing:transport' %}">- Доставка</a></li>
-                                        <li><a href="#">- Акции</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -304,10 +294,10 @@
                             <h4 class="widget-title">Информация о магазине.</h4>
                             <h4 class="widget-title widget-collapsed-title collapsed" data-bs-toggle="collapse" data-bs-target="#dividerId-4">Store Information.</h4>
                             <div id="dividerId-4" class="collapse widget-collapse-body">
-                                <p class="widget-address">2005 Your Address Goes Here. <br>896, Address 10010, HGJ</p>
+                                <p class="widget-address">Театральный проезд 5 Москва Центральный АО, Москва, <br> 109012</p>
                                 <ul class="widget-contact-info">
-                                    <li>Phone/Fax: <a href="tel://0123456789">0123456789</a></li>
-                                    <li>Email: <a href="mailto://demo@example.com">demo@example.com</a></li>
+                                    <li>Телефон: <a href="tel://84957800902">8 (495) 780-09-02</a></li>
+                                    <li>Почта: <a href="mailto://multishop@gmail.com">multishop@gmail.com</a></li>
                                 </ul>
                                 <div class="widget-payment-info">
                                     <div class="thumb">
