--- a/templates/main/content.html
+++ b/templates/main/content.html
@@ -34,7 +34,7 @@
                                         </div>
                                         <h2>Адрес</h2>
                                         <div class="content">
-                                            <p>Your address goes here</p>
+                                            <p>Театральный проезд 5 Москва Центральный АО, Москва, 109012</p>
                                         </div>
                                     </div>
                                 </div>
@@ -45,7 +45,7 @@
                                         </div>
                                         <h2>Номер телефона</h2>
                                         <div class="content">
-                                            <a href="tel://+00123456789">+ 00 123 456 789</a>
+                                            <a href="tel://+8 (495) 780-09-02">+ 8 (495) 780-09-02</a>
                                         </div>
                                     </div>
                                 </div>
@@ -56,18 +56,11 @@
                                         </div>
                                         <h2>Почта / Домен</h2>
                                         <div class="content">
-                                            <a href="mailto://demo@example.com">demo@example.com</a>
+                                            <a href="mailto://demo@example.com">multishop@gmail.com</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="contact-map-area">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8402891185374!2d144.95373631590425!3d-37.81720974201477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4c2b349649%3A0xb6899234e561db11!2sEnvato!5e0!3m2!1sen!2ssg!4v1607294780661!5m2!1sen!2ssg"></iframe>
                         </div>
                     </div>
                 </div>
