--- a/templates/shop/shop_gamepass.html
+++ b/templates/shop/shop_gamepass.html
@@ -9,6 +9,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 order-0 order-lg-1">
+                    <div class="shop-toolbar-wrap">
+                        <div class="product-showing-status">
+                            <p class="count-result"><span>{{ product.count }} </span> товара в каталоге из  <span> {{ product.count }}</span></p>
+                        </div>
+                    </div>
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="column-three" role="tabpanel" aria-labelledby="column-three-tab">
                             <div class="row">
