--- a/templates/shop/shop_radio.html
+++ b/templates/shop/shop_radio.html
@@ -9,62 +9,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 order-0 order-lg-1">
+                    <div class="shop-toolbar-wrap">
+                        <div class="product-showing-status">
+                            <p class="count-result"><span>{{ product.count }} </span> товара в каталоге из  <span> {{ product.count }}</span></p>
+                        </div>
+                    </div>
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="column-three" role="tabpanel" aria-labelledby="column-three-tab">
                             <div class="row">
                                 {% for item in product %}
                                     <div class="col-lg-3 col-md-4 col-sm-6">
-                                        <!-- Start Product Item -->
-                                        <div class="product-item">
-                                            <div class="product-thumb">
-                                                <img src="{{ item.picture.url }}" style="max-height: 201px; max-width: 191px;" alt="Image">
-                                                <div class="product-action">
-                                                    <a class="action-quick-view" href="{% url 'indexing:product-detail' item.pk %}"><i class="ion-arrow-expand"></i></a>
-                                                </div>
-                                            </div>
-                                            <div class="product-info">
-                                                <div class="rating">
-                                                    {% if item.star == 1 %}
-                                                        <span class="fa fa-star"></span>
-                                                    {% endif %}
-                                                    {% if item.star == 2 %}
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                    {% endif %}
-                                                    {% if item.star == 3 %}
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                    {% endif %}
-                                                    {% if item.star == 4 %}
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                    {% endif %}
-                                                    {% if item.star == 5 %}
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                    {% endif %}
-                                                </div>
-                                                <h4 class="title"><a href="{% url 'indexing:product-detail' item.pk %}">{{ item.namespace }}</a></h4>
-                                                <div class="prices">
-                                                    <span class="price">{{ item.price }} ₽</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- End Product Item -->
-                                    </div>
-                                {% endfor %}
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="nav-list" role="tabpanel" aria-labelledby="nav-list-tab">
-                            <div class="row">
-                                {% for item in product %}
-                                    <div class="col-12 product-items-list">
                                         <!-- Start Product Item -->
                                         <div class="product-item">
                                             <div class="product-thumb">
@@ -112,6 +66,61 @@
                                         </div>
                                         <!-- End Product Item -->
                                     </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="nav-list" role="tabpanel" aria-labelledby="nav-list-tab">
+                            <div class="row">
+                                {% for item in product %}
+                                    {% for i in item.category.all %}
+                                        {% if i.title == 'Радиоуправляемые модели' %}
+                                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                                <!-- Start Product Item -->
+                                                <div class="product-item">
+                                                    <div class="product-thumb">
+                                                        <img src="{{ item.picture.url }}" style="max-height: 201px; max-width: 191px;" alt="Image">
+                                                        <div class="product-action">
+                                                            <a class="action-quick-view" href="{% url 'indexing:product-detail' item.pk %}"><i class="ion-arrow-expand"></i></a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="product-info">
+                                                        <div class="rating">
+                                                            {% if item.star == 1 %}
+                                                                <span class="fa fa-star"></span>
+                                                            {% endif %}
+                                                            {% if item.star == 2 %}
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                            {% endif %}
+                                                            {% if item.star == 3 %}
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                            {% endif %}
+                                                            {% if item.star == 4 %}
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                            {% endif %}
+                                                            {% if item.star == 5 %}
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                                <span class="fa fa-star"></span>
+                                                            {% endif %}
+                                                        </div>
+                                                        <h4 class="title"><a href="{% url 'indexing:product-detail' item.pk %}">{{ item.namespace }}</a></h4>
+                                                        <div class="prices">
+                                                            <span class="price">{{ item.price }} ₽</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <!-- End Product Item -->
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
                                 {% endfor %}
                             </div>
                         </div>
