--- a/templates/auth/login-register.html
+++ b/templates/auth/login-register.html
@@ -59,21 +59,22 @@
                             <p>Создайте аккаунт в нашем магазине, это расширит функционал магазина и поможет вам отслеживать покупку. </p>
                         </div>
                         <div class="login-register-style">
-                            <form action="#" method="post">
+                            <form action="{% url 'indexing:register' %}" method="post">
+                                {% csrf_token %}
                                 <div class="login-register-input">
-                                    <input type="text" name="user-name" placeholder="Имя пользователя">
+                                    <input type="text" name="username" placeholder="Имя пользователя">
                                 </div>
                                 <div class="login-register-input">
-                                    <input type="text" name="user-name" placeholder="Почтовый адрес">
+                                    <input type="password" name="password1" placeholder="Пароль">
                                 </div>
                                 <div class="login-register-input">
-                                    <input type="password" name="user-password" placeholder="Пароль">
+                                    <input type="password" name="password2" placeholder="Подтверждение пароля">
                                 </div>
                                 <div class="login-register-paragraph">
                                     <p>Ваши личные данные будут использоваться для поддержки вашего опыта на этом веб-сайте, для управления доступом к вашей учетной записи и для других возможностей, описанных в нашей  <a href="{% url 'indexing:police' %}">политике конфиденциальности.</a></p>
                                 </div>
                                 <div class="btn-style-3">
-                                    <button class="btn" onclick="window.location.href='my-account.html'" type="button">Зарегистрироваться</button>
+                                    <button class="btn" type="submit">Зарегистрироваться</button>
                                 </div>
                             </form>
                             <div class="register-benefits">
